    * IMPORTANT: changed 'I' key to Ctrl-Q to also work in textboxes
    * IMPORTANT: :bmarks! and :history! open the matching items now in a tab, instead
      of bringing up the bookmarks/history window
    * IMPORTANT: "B" mapping now works just like :buffers, old bufferwindow will be removed
      at some time. Use B5gt to jump to the 5th tab.
    * gi accepts now a count to jump to the nth input field
    * ctrl-t on input fields starts a very basic vi-mode
    * :play for playing a recorded macro
    * :[del]macros [regex] for listing/deleting recorded macros
    * :set! now lets you change about:config prefs similar to :set
    * new :command to add user defined commands
    * new setCustomMode for plugin writers
    * :au[tocmd] executes commands on events (only 'PageLoad' actually) on websites
    * @@ to repeat last macro
    * new macro commands q[a-z0-9] and @[a-z0-9] to replay them (thanks Marco!)
    * scroll commands like j/k/gg/etc. have a much better heuristic to find a scrollable frame
    * imap, inoremap, iunmap and imapclear added
    * new g0 and g$ mappings to go to the first/last tab
    * new gf and gF mappings and ;v and ;V hints mode to view the source code
    * new 'history' option for specifying the number of Ex commands and
      search patterns to store in the commandline history
    * new ctrl-x and ctrl-a mappings to increment the last number in the URL
    * new ~ mapping to open the home directory
    * :open tries to open a relative filename now, if you do a :open foo.html
      or :open ../hello.txt;
    * new :cd and :pwd commands
    * new :dialog command to open various firefox dialogs
    * new a and A mappings to deal with bookmarks
    * added ]] and [[ to navigate to the next/previous document based on
      the regexp specified in 'nextpattern' and 'previouspattern' (thanks kidd)
    * abbreviations for text fields (:abbr etc.) (thanks calmar)